--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,9 @@ main {
   padding-top: 8px;
   margin-top: 8px;
 }
+
+.quiz-answer-card:hover {
+  cursor: pointer;
+
+  background-color: rgba(0, 0, 0, 0.05);
+}
